<resources>
    <string name="app_name">Visitr</string>
    <string name="menu_local">Tours</string>
    <string name="menu_tour">Your Tour</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_create">Create Tour</string>
    <string name="ApplicationTour">ApplicationTour</string>
    <string name="ApplicationTourKey">ApplicationTourKey</string>
    <string name="stop_button">STOP</string>
    <string name="pause_button_pause">PAUSE</string>
    <string name="pause_button_resume">RESUME</string>
    <string name="stop_tour_yes">YES</string>
    <string name="stop_tour_no">NO</string>
    <string name="stop_tour_review">YES AND REVIEW</string>
    <string name="stop_tour_text">Are you sure you want to end your tour?</string>
    <string name="next_button">NEXT</string>
    <string name="previous_text">Last stop: </string>
    <string name="next_text">Next stop: </string>
    <string name="current_text">Current stop: </string>
    <string name="timer_default">Min: 0 Sec: 0</string>

    <string-array name="genre_string_array">
        <item></item>
        <item>Art</item>
        <item>Sports</item>
        <item>Food</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>
