<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/local_tours"
        android:title="@string/menu_local"
        android:onClick="onLocalToursClicked"
        app:showAsAction="always"/>
    <item
        android:id="@+id/your_tour"
        android:title="@string/menu_tour"
        android:onClick="onYourTourClicked"
        app:showAsAction="always"/>
    <item

        android:id="@+id/user_profile"
        android:title="@string/menu_profile"
        android:onClick="onProfileClicked"
        app:showAsAction="always"/>
    <item
        android:id="@+id/create_tour"
        android:title="@string/menu_create"
        android:onClick="onCreateClicked"
        app:showAsAction="always"/>



</menu>