<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/stopTourText"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/stop_tour_text"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/yesandreview"
        android:layout_width="107dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:onClick="onStopReviewClicked"
        android:text="@string/stop_tour_review"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/yes"
        android:layout_width="82dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:onClick="onStopYesClicked"
        android:text="@string/stop_tour_yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yesandreview"
        app:layout_constraintTop_toBottomOf="@+id/stopTourText"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/no"
        android:layout_width="82dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:onClick="onStopNoClicked"
        android:text="@string/stop_tour_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toEndOf="@+id/yes" />
</android.support.constraint.ConstraintLayout>